# Project-77-DL-in-audio-processing

./: .gitignore  EDA.md  Evaluate.txt  POSTrequest.txt  PredictMidi.txt  README.md  SelectModel.txt  TrainModel.txt  TuneHyperparameters.txt  checkpoints.md  dataset.md  docker-compose.yml  ptch.ipynb  Отчет.pptx
Dataset/Songster/: Songster_Youtube_scrap.ipynb  formatted.html  songs_data.json
Frontend/: .dockerignore  Dockerfile  requirements.txt  server.py
SynchronizationTool/: pyproject.toml
SynchronizationTool/transcribing_tool_synchronize/: chromo_sync.py
Visualize_spectr/Visualize_spectr/: main.py
Visualize_spectr/Visualize_spectr/static/: index.html
logistical_regression/: .gitignore.txt  Dockerfile  requirements.txt
logistical_regression/misc/: get_vocals_from_midi.py
logistical_regression/model_trainer/: __init__.py  main.py
logistical_regression/model_trainer/api/: __init__.py
logistical_regression/model_trainer/reports/: accuracy_report_model_full_v1.txt  accuracy_report_model_full_v2.txt  accuracy_report_model_full_v3.txt  classification_report_model_full_v1.txt  classification_report_model_full_v2.1.txt  classification_report_model_full_v3.txt  classification_report_model_full_v5.txt  classification_report_model_full_v6.txt  classification_report_model_vocals_v4.txt  matrix_report_model_full_v2.1.txt  matrix_report_model_full_v5.txt  matrix_report_model_full_v6.txt  matrix_report_model_vocals_v4.txt
logistical_regression/model_trainer/serializers/: __init__.py  serializers.py
logistical_regression/model_trainer/services/: __init__.py  (+5 more)
(+4 files in other folders)
