[tool.poetry]
name = "transcribing-tool-synchronize"
version = "0.1.0"
description = ""
authors = ["hum_tech <udalov0078@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
librosa = "^0.10.2.post1"
matplotlib = "^3.9.2"
python-multipart = "^0.0.12"
plotly = "^5.24.1"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
